integration-tests/migration/testdata/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: confluent
  labels:
    app.kubernetes.io/managed-by: kcp-e2e
